arrumando swagger de dentista
